Minor edits to Navbar + fixed broken links in navbar. + edited spacing in navbar and created fixed position.

--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,22 @@ p {
     height: 20px;
 }
 
+header {
+    position: fixed;
+    z-index: 100;
+    background-color: white;
+    top: 0;
+    left: 0;
+    width:100%;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
     padding: 10px;
     text-transform: uppercase;
-    margin-left: 50px;
-    margin-right: 50px;
+    padding: 25px;
+
 }
 a {
     color: black;
@@ -88,7 +97,8 @@ li a {
 
 
 .nav_line {
-    margin: auto;
+    margin: 0;
+    width: 100%;
     
 }
 
@@ -323,7 +333,7 @@ input {
     height: 60px;
 }
 
-.col-1 {width: 8.33%;}
+/* .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
@@ -382,4 +392,4 @@ img {
     flex-wrap: wrap;
 
 }
-}
+} */
